Mojaloop.DFSPID.API-develop/DeploymentYAML/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dfspid
  namespace: testmiddleware
  labels:
    k8s-app: dfspid
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: dfspid
  template:
    metadata:
      name: dfspid
      labels:
        k8s-app: dfspid
    spec:
      containers:
        - name: dfspid
          image: {devops}/dfspid:develop
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
            procMount: Default
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: pullsecret
      schedulerName: default-scheduler
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
