Mojaloop.DFSPID.API-develop/DeploymentYAML/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: servicerewrites
  namespace: testmiddleware
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: testmoja.{devops}.com
      http:
        paths:
          - path: /dfspid(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: dfspid
              servicePort: 8080
